# qutil

./: .clangd  .gitignore  CMakeLists.txt  README.md  install.sh  log.txt
examples/constexpr_string/: CMakeLists.txt  constexpr_string.cpp
examples/dump/: CMakeLists.txt  dump.cpp  dump_example.cpp
examples/logger/: CMakeLists.txt  logger.cpp
examples/read/: CMakeLists.txt  read.cpp
examples/result/: CMakeLists.txt  result.cpp
examples/tuple/: CMakeLists.txt  tuple.cpp
include/qutil/: .clang-format  .clang-tidy  constexpr_string.hpp  dump.hpp  result.hpp  tuple.hpp
include/qutil/containers/: constexpr_string.hpp  result.hpp  tuple.hpp
include/qutil/io/: dump.hpp  logger.hpp  read.hpp  sink.hpp
include/qutil/io/sink/: sink.hpp
tests/: CMakeLists.txt  constexpr_string_test.cpp  main_benchmark.cpp
